tdf#118668: handle wrong XLSX sheet visibility settings in line with Excel

Change-Id: I97b3b894a66c3108d67e0c8ef3b6b77aea11f365
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188060
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Jenkins
(cherry picked from commit 098a900142491477223e3340f29a15505efe99cc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188700
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>